@@ -1,3 +1,8 @@
+2008-04-27  Jb Evain  <jbevain@novell.com>
+
+	* MethodCanBeMadeStaticTest.cs: test that ensure that
+	this rule doesn't apply on event callbacks.
+
 2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* DontCompareWithNaNTest.cs: Fix name change.
